# zerodha-monitor

./: .gitignore  README.md  config.yaml  holdings.example.yaml  pyproject.toml  realized_pnl.example.yaml
india_monitor/: config_loader.py  holdings_loader.py  main.py  secrets.py  store.py
india_monitor/rules/: __init__.py  sell_near_high.py
india_monitor/scripts/: import_holdings.py  run_guarded.py
india_monitor/templates/: india_alert.html.j2
launchd/: com.indiamonitor.daily.plist  com.zerodhamonitor.daily.plist
tests/: test_holdings_loader.py  test_sell_near_high.py
zerodha_monitor/: config_loader.py  email_dispatch.py  holdings_loader.py  main.py  market_data.py  store.py
zerodha_monitor/rules/: __init__.py  bounce_alert.py  exit_momentum.py  ma_crossover.py  sell_near_high.py
zerodha_monitor/scripts/: import_holdings.py  run_guarded.py
zerodha_monitor/templates/: india_alert.html.j2  india_digest.html.j2
