[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "india-monitor"
version = "0.1.0"
description = "Zerodha India portfolio sell-near-high alert system."
requires-python = ">=3.11"
authors = [{ name = "Mandeep" }]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "jinja2>=3.1",
    "keyring>=25.0",
    "pydantic>=2.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
india-monitor = "india_monitor.main:cli"
india-monitor-run-once = "india_monitor.scripts.run_guarded:main"

[tool.hatch.build.targets.wheel]
packages = ["india_monitor"]
